tests/parser/good/comparison.gbl
fn f() {
	var a = 1 == 2;
	var b = 1 != 2;
	var c = 1 < 2;
	var d = 1 <= 2;
	var e = 1 > 2;
	var f = 1 >= 2;
}
