tests/parser/errors/if_else_no_lbrace.gbl
fn f() {
	if x { } else var a = 1;
}
